--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -1,22 +1,294 @@
 {% extends "master.html.twig" %}
-{% block title %}News list{% endblock %}
+
+{% block title %}Login{% endblock %}
+{% block headextra %}
+
+
+{%endblock %}
 {% block content %}
-    <p><a href="/news/add">Add News</a><p>
-    <table border=1>
-          <tr><th>#</th><th>Title</th><th>New Body</th><th>Date</th><th>action</th></tr>
-        {% for n in list %}
-                <tr class="{% if loop.index is odd %}rowodd{% else %}roweven{% endif %}">
-                    <td>{{n.newsId}}</td>
-                    <td>{{n.title}}</td>
-                    <td>{{n.newsBody}}</td>
-                    <td>{{n.newsDate}}</td>                    
-                    <td>
-                        <a href="/news/delete/{{n.newsId}}">Delete</a>
-                        <a href="/news/edit/{{n.newsId}}">Edit</a>
-                    </td>
-                </tr>
-        {% else %}
-            <tr><td colspan="6"> You have no news</td></tr>
-        {% endfor %}
-    </table>    
-{% endblock %}
+
+    <!-- Body content -->
+
+    <div class="header-connect">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-sm-8  col-xs-12">
+                    <div class="header-half header-call">
+                        <p>
+                            <span><i class="pe-7s-call"></i> 514 296 0249</span>
+                            <span><i class="pe-7s-mail"></i> realestate@company.com</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-2 col-md-offset-5  col-sm-3 col-sm-offset-1  col-xs-12">
+                    <div class="header-half header-social">
+                        <ul class="list-inline">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-vine"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>            
+    <!--End top header -->
+
+    <nav class="navbar navbar-default ">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"><img src="assets/img/logo.png" alt=""></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse yamm" id="navigation">
+                <div class="button navbar-right">
+                    <button class="navbar-btn nav-button wow bounceInRight login" onclick=" window.open('/user/login')" data-wow-delay="0.4s">Login</button>
+                    <button class="navbar-btn nav-button wow fadeInRight" onclick=" window.open('/user/register')" data-wow-delay="0.5s">Register</button>
+                </div>
+                <ul class="main-nav nav navbar-nav navbar-right">
+                    <li class="dropdown ymm-sw " data-wow-delay="0.1s">
+                        <a href="/" class="dropdown-toggle active" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Home <b class="caret"></b></a>
+
+                    </li>
+
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="properties.html">Properties</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="property.html">Property</a></li>
+
+
+                    <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <!-- End of nav bar -->
+    <div class="page-head"> 
+        <div class="container">
+            <div class="row">
+                <div class="page-head-content">
+                    <h1 class="page-title">News List</h1>               
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End page header -->
+
+    <div class="content-area blog-page padding-top-40" style="background-color: #FCFCFC; padding-bottom: 55px;">
+        <div class="container">   
+            <div class="row">
+                <div class="blog-lst col-md-12 pl0">
+                    {% for n in list %}
+                        <section class="post">
+                            <div class="text-center padding-b-50">
+                                <h2 class="wow fadeInLeft animated">{{n.title}}</h2>
+                                <div class="title-line wow fadeInRight animated"></div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <p class="author-category">
+                                        By <a href="#">{{n.userId}}</a>
+                                        in <a href="/news/list/">Webdesign</a>
+                                    </p>
+                                </div>
+                                <div class="col-sm-6 right" >
+                                    <p class="date-comments">
+                                        <a href="single.html"><i class="fa fa-calendar-o"></i> {{n.newsDate}}</a>
+                                       
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="image wow fadeInLeft animated">
+                                <a href="single.html">
+                                    <img src="assets/img/blog2.jpg" class="img-responsive" alt="Example blog post alt">
+                                </a>
+                            </div>
+                            <p class="intro">{{n.newsBody}}</p>
+                            <p class="read-more">
+                                <a href="single.html" class="btn btn-default btn-border">Continue reading</a>
+                            </p>
+                        </section>   
+
+
+                    {% endfor %}
+
+
+
+
+                    <!-- Footer area-->
+                    <div class="footer-area">
+
+                        <div class=" footer">
+                            <div class="container">
+                                <div class="row">
+
+                                    <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                                        <div class="single-footer">
+                                            <h4>About us </h4>
+                                            <div class="footer-title-line"></div>
+
+                                            <img src="" alt="" class="wow pulse" data-wow-delay="1s">
+                                            <p>Lorem ipsum dolor cum necessitatibus su quisquam molestias. Vel unde, blanditiis.</p>
+                                            <ul class="footer-adress">
+                                                <li><i class="pe-7s-map-marker strong"> </i> 3488 Cote Des Neiges</li>
+                                                <li><i class="pe-7s-mail strong"> </i> mj_hadi@realestat.com</li>
+                                                <li><i class="pe-7s-call strong"> </i> +1 514 519 7049</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                                        <div class="single-footer">
+                                            <h4>Quick links </h4>
+                                            <div class="footer-title-line"></div>
+                                            <ul class="footer-menu">
+                                                <li><a href="properties.html">Properties</a>  </li> 
+                                                <li><a href="#">Services</a>  </li> 
+                                                <li><a href="submit-property.html">Submit property </a></li> 
+                                                <li><a href="contact.html">Contact us</a></li> 
+                                                <li><a href="faq.html">fqa</a>  </li> 
+                                                <li><a href="faq.html">Terms </a>  </li> 
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                                        <div class="single-footer">
+                                            <h4>Last News</h4>
+                                            <div class="footer-title-line"></div>
+                                            <ul class="footer-blog">
+                                                <li>
+                                                    <div class="col-md-3 col-sm-4 col-xs-4 blg-thumb p0">
+                                                        <a href="single.html">
+                                                            <img src="assets/img/demo/small-proerty-2.jpg">
+                                                        </a>
+                                                        <span class="blg-date">12-12-2016</span>
+
+                                                    </div>
+                                                    <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
+                                                        <h6> <a href="single.html">Add news functions </a></h6> 
+                                                        <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
+                                                    </div>
+                                                </li> 
+
+                                                <li>
+                                                    <div class="col-md-3 col-sm-4 col-xs-4 blg-thumb p0">
+                                                        <a href="single.html">
+                                                            <img src="assets/img/demo/small-proerty-2.jpg">
+                                                        </a>
+                                                        <span class="blg-date">12-12-2016</span>
+
+                                                    </div>
+                                                    <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
+                                                        <h6> <a href="single.html">Add news functions </a></h6> 
+                                                        <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
+                                                    </div>
+                                                </li> 
+
+                                                <li>
+                                                    <div class="col-md-3 col-sm-4 col-xs-4 blg-thumb p0">
+                                                        <a href="single.html">
+                                                            <img src="assets/img/demo/small-proerty-2.jpg">
+                                                        </a>
+                                                        <span class="blg-date">12-12-2016</span>
+
+                                                    </div>
+                                                    <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
+                                                        <h6> <a href="single.html">Add news functions </a></h6> 
+                                                        <p style="line-height: 17px; padding: 8px 2px;">Lorem ipsum dolor sit amet, nulla ...</p>
+                                                    </div>
+                                                </li> 
+
+
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                                        <div class="single-footer news-letter">
+                                            <h4>Stay in touch</h4>
+                                            <div class="footer-title-line"></div>
+                                            <p>Lorem ipsum dolor sit amet, nulla  suscipit similique quisquam molestias. Vel unde, blanditiis.</p>
+
+                                            <form>
+                                                <div class="input-group">
+                                                    <input class="form-control" type="text" placeholder="E-mail ... ">
+                                                    <span class="input-group-btn">
+                                                        <button class="btn btn-primary subscribe" type="button"><i class="pe-7s-paper-plane pe-2x"></i></button>
+                                                    </span>
+                                                </div>
+                                                <!-- /input-group -->
+                                            </form> 
+
+                                            <div class="social pull-right"> 
+                                                <ul>
+                                                    <li><a class="wow fadeInUp animated" href="#"><i class="fa fa-twitter"></i></a></li>
+                                                    <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.2s"><i class="fa fa-facebook"></i></a></li>
+                                                    <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.3s"><i class="fa fa-google-plus"></i></a></li>
+                                                    <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.4s"><i class="fa fa-instagram"></i></a></li>
+                                                    <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.6s"><i class="fa fa-dribbble"></i></a></li>
+                                                </ul> 
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="footer-copy text-center">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="pull-left">
+                                        <span> (C) <a href="#">Real Estate</a> , All rights reserved 2017  </span> 
+                                    </div> 
+                                    <div class="bottom-menu pull-right"> 
+                                        <ul> 
+                                            <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.2s">Home</a></li>
+                                            <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.3s">Property</a></li>
+                                            <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.4s">Faq</a></li>
+                                            <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.6s">Contact</a></li>
+                                        </ul> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                {% endblock content %}
+                {% block footerExtra %}
+                    <script src="/assets/js/modernizr-2.6.2.min.js"></script>
+
+                    <script src="/assets/js/jquery-1.10.2.min.js"></script>
+                    <script src="/bootstrap/js/bootstrap.min.js"></script>
+                    <script src="/assets/js/bootstrap-select.min.js"></script>
+                    <script src="/assets/js/bootstrap-hover-dropdown.js"></script>
+
+                    <script src="/assets/js/easypiechart.min.js"></script>
+                    <script src="/assets/js/jquery.easypiechart.min.js"></script>
+
+                    <script src="/assets/js/owl.carousel.min.js"></script>   
+                    <script src="/assets/js/wow.js"></script>
+
+                    <script src="/assets/js/icheck.min.js"></script>
+                    <script src="/assets/js/price-range.js"></script>
+
+                    <script src="/assets/js/main.js"></script>
+
+
+                {% endblock %}
+
+
+
+
+
+
