--- a/templates/user/login_user.html.twig
+++ b/templates/user/login_user.html.twig
@@ -137,9 +137,9 @@
                             <img src="" alt="" class="wow pulse" data-wow-delay="1s">
                             <p>Lorem ipsum dolor cum necessitatibus su quisquam molestias. Vel unde, blanditiis.</p>
                             <ul class="footer-adress">
-                                <li><i class="pe-7s-map-marker strong"> </i> 9089 your adress her</li>
-                                <li><i class="pe-7s-mail strong"> </i> email@yourcompany.com</li>
-                                <li><i class="pe-7s-call strong"> </i> +1 908 967 5906</li>
+                                <li><i class="pe-7s-map-marker strong"> </i> 3488 Cote Des Neiges</li>
+                                <li><i class="pe-7s-mail strong"> </i> info@realestate.com</li>
+                                <li><i class="pe-7s-call strong"> </i> +1 514 519 7049</li>
                             </ul>
                         </div>
                     </div>
