--- a/templates/property/property_list.html.twig
+++ b/templates/property/property_list.html.twig
@@ -1,35 +1,318 @@
-{#{% extends "master.html.twig" %}#}
+{% extends "master.html.twig" %}
 {% block title %}Property list{% endblock %}
 {% block content %}
-    <p><a href="/property/add">Add Property</a><p>
-    <table border=1>
-          <tr><th>#</th><th>PropertyType</th><th>Latitude</th><th>Longitude</th><th>Beds</th>
-              <th>Baths</th><th>Price</th><th>SqureFeet</th><th>Image</th><th>action</th></tr>
-        {% for p in list %}
-                <tr class="{% if loop.index is odd %}rowodd{% else %}roweven{% endif %}">
-                    <td>{{p.propertyId}}</td>
-                    <td>{{p.propertyType}}</td>
-                    <td>{{p.latitude}}</td>
-                    <td>{{p.longitude}}</td>
-                    <td>{{p.beds}}</td>
-                    <td>{{p.baths}}</td>
-                    <td>{{p.price}}</td>
-                    <td>{{p.squreFeet}}</td> 
-                    <td><img src="{{p.imagePath}}"  width="150"></td>
-                    <td>
-                        <a href="/property/delete/{{p.propertyId}}">Delete</a>
-                        <a href="/property/edit/{{p.propertyId}}">Edit</a>
-                         <a href="/property/googlemap/{{p.propertyId}}">Goole Maps</a>
-                    </td>
-                </tr>
-        {% else %}
-            <tr><td colspan="6"> You have no property</td></tr>
-        {% endfor %}
-    </table>   
+   <div id="preloader">
+            <div id="status">&nbsp;</div>
+        </div>
+        <!-- Body content -->
+
+        <div class="header-connect">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-5 col-sm-8  col-xs-12">
+                        <div class="header-half header-call">
+                            <p>
+                                <span><i class="pe-7s-call"></i> 514 296 0249</span>
+                                <span><i class="pe-7s-mail"></i> info@realestate.com</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-md-offset-5  col-sm-3 col-sm-offset-1  col-xs-12">
+                        <div class="header-half header-social">
+                            <ul class="list-inline">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-vine"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>            
+        <!--End top header -->
+
+        <nav class="navbar navbar-default ">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/"><img src="assets/img/logo.png" alt=""></a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse yamm" id="navigation">
+                    <div class="button navbar-right">
+                        <button class="navbar-btn nav-button wow bounceInRight login" onclick=" window.open('/user/login')" data-wow-delay="0.4s">Login</button>
+                        <button class="navbar-btn nav-button wow fadeInRight" onclick=" window.open('/user/register')" data-wow-delay="0.5s">Register</button>
+                    </div>
+                    <ul class="main-nav nav navbar-nav navbar-right">
+                        <li class="dropdown ymm-sw " data-wow-delay="0.1s">
+                            <a href="/" class="dropdown-toggle active" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Home <b class="caret"></b></a>
+                           
+                        </li>
+
+                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="properties.html">Properties</a></li>
+                        <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="property.html">Property</a></li>
+                    
+
+                        <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+        <!-- End of nav bar -->
+
+        <div class="page-head"> 
+            <div class="container">
+                <div class="row">
+                    <div class="page-head-content">
+                        <h1 class="page-title">List of property</h1>               
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End page header -->
+
         
-        {% for a in v.adResults %}
-            <p><a href='/add/details/{{a.id}}'>{{ a.title }}</a></p>
-        {% else %}
-            <p>No ads found matching this search</p>
-        {% endfor %}
+        
+          <!-- property area -->
+        <div class="content-area recent-property" style="padding-bottom: 60px; background-color: rgb(252, 252, 252);">
+            <div class="container">   
+                <div class="row">
+                    <div class="col-md-12  padding-top-40 properties-page">
+                        <div class="col-md-12 "> 
+                            <div class="col-xs-10 page-subheader sorting pl0">
+
+                                <ul class="sort-by-list">
+                                    <li class="active">
+                                        <a href="javascript:void(0);" class="order_by_date" data-orderby="property_date" data-order="ASC">
+                                            Property Date <i class="fa fa-sort-amount-asc"></i>					
+                                        </a>
+                                    </li>
+                                    <li class="">
+                                        <a href="javascript:void(0);" class="order_by_price" data-orderby="property_price" data-order="DESC">
+                                            Property Price <i class="fa fa-sort-numeric-desc"></i>						
+                                        </a>
+                                    </li>
+                                </ul><!--/ .sort-by-list-->
+
+                                <div class="items-per-page">
+                                    <label for="items_per_page"><b>Property per page :</b></label>
+                                    <div class="sel">
+                                        <select id="items_per_page" name="per_page">
+                                            <option value="3">3</option>
+                                            <option value="6">6</option>
+                                            <option value="9">9</option>
+                                            <option selected="selected" value="12">12</option>
+                                            <option value="15">15</option>
+                                            <option value="30">30</option>
+                                            <option value="45">45</option>
+                                            <option value="60">60</option>
+                                        </select>
+                                    </div><!--/ .sel-->
+                                </div><!--/ .items-per-page-->
+                            </div>
+
+                            <div class="col-xs-2 layout-switcher">
+                                <a class="layout-list" href="javascript:void(0);"> <i class="fa fa-th-list"></i>  </a>
+                                <a class="layout-grid active" href="javascript:void(0);"> <i class="fa fa-th"></i> </a>                          
+                            </div><!--/ .layout-switcher-->
+                        </div>
+
+                        <div class="col-md-12 "> 
+                            <div id="list-type" class="proerty-th">
+                            {% for p in list %}
+                                <div class="col-sm-6 col-md-3 p0">
+                                    <div class="box-two proerty-item">
+                                        <div class="item-thumb">
+                                            <a href="property-1.html" ><img src="/{{p.FILE_NAME}}"></a>
+                                        </div>
+
+                                        <div class="item-entry overflow">
+                                            <h5><a href="property-1.html"> {{p.propertyType}} </a></h5>
+                                            <div class="dot-hr"></div>
+                                            <span class="pull-left"><b> Area :</b>{{p.latitude}},{{p.longitude}} </span>
+                                            <span class="proerty-price pull-right"> $ {{p.price}}</span>
+                                            <p style="display: none;">SquaeertFeet: {{p.squreFeet}}</p>
+                                            <div class="property-icon">
+                                                <img src="img/icon/bed.png">({{p.beds}})|
+                                                <img src="img/icon/shawer.png">({{p.baths}})|
+                                                <img src="img/icon/cars.png"> <a href="/property/delete/{{p.propertyId}}">Delete</a>
+                                                   <a href="/property/edit/{{p.propertyId}}">Edit</a>
+                                                   <a href="/property/googlemap/{{p.propertyId}}">Goole Maps</a>
+                                            </div>
+                                        </div>
+
+
+                                    </div>
+                                </div> 
+                                    {% endfor %}
+                             
+                            </div>
+                        </div>
+                        <div class="col-md-12"> 
+                            <div class="pull-right">
+                                <div class="pagination">
+                                    <ul>
+                                        <li><a href="#">Prev</a></li>
+                                        <li><a href="#">1</a></li>
+                                        <li><a href="#">2</a></li>
+                                        <li><a href="#">3</a></li>
+                                        <li><a href="#">4</a></li>
+                                        <li><a href="#">Next</a></li>
+                                    </ul>
+                                </div>
+                            </div>                
+                        </div>
+                    </div>  
+                </div>
+            </div>
+        </div>
+
+        
+        
+        
+        
+          <!-- Footer area-->
+        <div class="footer-area">
+      <div class=" footer">
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                            <div class="single-footer">
+                                <h4>About us </h4>
+                                <div class="footer-title-line"></div>
+
+                                <img src="" alt="" class="wow pulse" data-wow-delay="1s">
+                                <p>Real Estate is a leading residential and commercial property agency, with land and valuation divisions based in Co Down with offices in Newry and Dungannon..</p>
+                                <ul class="footer-adress">
+                                    <li><i class="pe-7s-map-marker strong"> </i> 3488 Cote Des Neiges</li>
+                                    <li><i class="pe-7s-mail strong"> </i> info@realestate.com</li>
+                                    <li><i class="pe-7s-call strong"> </i> +1 514 519 7049</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                            <div class="single-footer">
+                                <h4>Quick links </h4>
+                                <div class="footer-title-line"></div>
+                                <ul class="footer-menu">
+                                    <li><a href="properties.html">Properties</a>  </li> 
+                                    <li><a href="#">Services</a>  </li> 
+                                    <li><a href="submit-property.html">Submit property </a></li> 
+                                    <li><a href="contact.html">Contact us</a></li> 
+                                    <li><a href="faq.html">fqa</a>  </li> 
+                                    <li><a href="faq.html">Terms </a>  </li> 
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                            <div class="single-footer">
+                                <h4>Last News</h4>
+                                <div class="footer-title-line"></div>
+                                 {% for l in list %}
+                                <ul class="footer-blog">
+                                   
+                                    <li>
+                                        <div class="col-md-3 col-sm-4 col-xs-4 blg-thumb p0">
+                                            <a href="single.html">
+                                                <img src="/assets/img/demo/small-proerty-2.jpg">
+                                            </a>
+                                            <span class="blg-date">{{l.newsDate}}</span>
+
+                                        </div>
+                                        <div class="col-md-8  col-sm-8 col-xs-8  blg-entry">
+                                            <h6> <a href="{{l.lien}}">{{l.title}} </a></h6> 
+                                            <p style="line-height: 17px; padding: 8px 2px;">{{l.title}}</p>
+                                        </div>
+                                    </li> 
+
+                                   
+
+                                </ul>
+                                         {% endfor %}
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 wow fadeInRight animated">
+                            <div class="single-footer news-letter">
+                                <h4>Stay in touch</h4>
+                                <div class="footer-title-line"></div>
+                                <p>Lorem ipsum dolor sit amet, nulla  suscipit similique quisquam molestias. Vel unde, blanditiis.</p>
+
+                                <form>
+                                    <div class="input-group">
+                                        <input class="form-control" type="text" placeholder="E-mail ... ">
+                                        <span class="input-group-btn">
+                                            <button class="btn btn-primary subscribe" type="button"><i class="pe-7s-paper-plane pe-2x"></i></button>
+                                        </span>
+                                    </div>
+                                    <!-- /input-group -->
+                                </form> 
+
+                                <div class="social pull-right"> 
+                                    <ul>
+                                        <li><a class="wow fadeInUp animated" href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.2s"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.3s"><i class="fa fa-google-plus"></i></a></li>
+                                        <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.4s"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.6s"><i class="fa fa-dribbble"></i></a></li>
+                                    </ul> 
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-copy text-center">
+                <div class="container">
+                    <div class="row">
+                        <div class="pull-left">
+                            <span> (C) <a href="#">Real Estate</a> , All rights reserved 2017 </span> 
+                        </div> 
+                        <div class="bottom-menu pull-right"> 
+                            <ul> 
+                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.2s">Home</a></li>
+                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.3s">Property</a></li>
+                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.4s">Faq</a></li>
+                                <li><a class="wow fadeInUp animated" href="#" data-wow-delay="0.6s">Contact</a></li>
+                            </ul> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 {% endblock %}
+{% block footerExtra %}
+ <script src="/assets/js/modernizr-2.6.2.min.js"></script>
+
+        <script src="/assets/js/jquery-1.10.2.min.js"></script>
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/bootstrap-select.min.js"></script>
+        <script src="/assets/js/bootstrap-hover-dropdown.js"></script>
+
+        <script src="/assets/js/easypiechart.min.js"></script>
+        <script src="/assets/js/jquery.easypiechart.min.js"></script>
+
+        <script src="/assets/js/owl.carousel.min.js"></script>   
+        <script src="/assets/js/wow.js"></script>
+
+        <script src="/assets/js/icheck.min.js"></script>
+        <script src="/assets/js/price-range.js"></script>
+
+        <script src="/assets/js/main.js"></script>
+  
+ 
+{% endblock %}
+
